@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_REVISION($Revision: 1.178 $)
+AC_REVISION($Revision: 1.179 $)
 AC_INIT([GNU Backgammon],[0.16-devel],[bug-gnubg@gnu.org],[gnubg])
 AC_CONFIG_SRCDIR(gnubg.c)
 AM_INIT_AUTOMAKE
@@ -62,8 +62,6 @@ dnl
 
 AC_PROG_AWK
 AC_PROG_LN_S
-AC_CHECK_PROG(CSOUND, csound, csound, true)
-AC_CHECK_PROG(SRCONV, srconv, srconv, true)
 AC_CHECK_PROGS(DOCBOOK2TEXI, docbook2x-texi db2x_docbook2texi, false)
 AC_CHECK_PROGS(DOCBOOK2MAN, docbook2x-man db2x_docbook2man, false)
 AC_CHECK_PROGS(DBLATEX, dblatex, false)
